--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ databases:
 
 services:
   - type: web
-    name: django_render
+    name: django_render2
     env: python
     region: singapore
     buildCommand: './build.sh'
